--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,7 +1,9 @@
-font=Hack Nerd Font:style=Regular:size=14
-font-bold=Hack Nerd Font:style=Bold:size=14
+font=CaskaydiaCoveNerdFont:style=Regular:size=15.5
+font-bold=CaskaydiaCoveNerdFont:style=Bold:size=15.5
+font-italic=CaskaydiaCoveNerdFont:style=Italic:size=15.5
 
-pad=7x7
+
+pad=7x5
 
 [key-bindings]
 font-increase=Control+o
@@ -10,23 +12,30 @@ font-reset=Control+r
 spawn-terminal=Mod1+i
 scrollback-up-half-page=Control+m
 scrollback-down-half-page=Control+f
+scrollback-up-page=Mod4+m
+
 
 [colors]
-foreground=cad3f5 # Text
-background=24273a # Base
-regular0=494d64   # Surface 1
-regular1=ed8796   # red
-regular2=a6da95   # green
-regular3=eed49f   # yellow
-regular4=8aadf4   # blue
-regular5=f5bde6   # pink
-regular6=8bd5ca   # teal
-regular7=b8c0e0   # Subtext 1
-bright0=5b6078    # Surface 2
-bright1=ed8796    # red
-bright2=a6da95    # green
-bright3=eed49f    # yellow
-bright4=8aadf4    # blue
-bright5=f5bde6    # pink
-bright6=8bd5ca    # teal
-bright7=a5adcb    # Subtext 0
+foreground=4c4f69 # Text
+background=eff1f5 # Base
+regular0=5c5f77   # Subtext 1
+regular1=d20f39   # red
+regular2=40a02b   # green
+regular3=df8e1d   # yellow
+regular4=1e66f5   # blue
+regular5=ea76cb   # pink
+regular6=179299   # teal
+regular7=acb0be   # Surface 2
+bright0=6c6f85    # Subtext 0
+bright1=d20f39    # red
+bright2=40a02b    # green
+bright3=df8e1d    # yellow
+bright4=1e66f5    # blue
+bright5=ea76cb    # pink
+bright6=179299    # teal
+bright7=bcc0cc    # Surface 1
+
+[key-bindings]
+font-increase=Control+y
+font-decrease=Control+o
+font-reset=Control+r
