--- a/foot/light.ini
+++ b/foot/light.ini
@@ -1,26 +1,41 @@
-font=DaddyTimeMono Nerd Font:style=Regular:size=14
-font-bold=DaddyTimeMono Nerd Font:style=Bold:size=14
-pad=4x4
+font=CaskaydiaCoveNerdFont:style=Regular:size=15.5
+font-bold=CaskaydiaCoveNerdFont:style=Bold:size=15.5
+font-italic=CaskaydiaCoveNerdFont:style=Italic:size=15.5
+
+
+pad=7x5
+
+[key-bindings]
+font-increase=Control+o
+font-decrease=Control+y
+font-reset=Control+r
+spawn-terminal=Mod1+i
+scrollback-up-half-page=Control+m
+scrollback-down-half-page=Control+f
+scrollback-up-page=Mod4+m
+
 
 [colors]
-background=dadada
-foreground=4e4e4e
+foreground=4c4f69 # Text
+background=eff1f5 # Base
+regular0=5c5f77   # Subtext 1
+regular1=d20f39   # red
+regular2=40a02b   # green
+regular3=df8e1d   # yellow
+regular4=1e66f5   # blue
+regular5=ea76cb   # pink
+regular6=179299   # teal
+regular7=acb0be   # Surface 2
+bright0=6c6f85    # Subtext 0
+bright1=d20f39    # red
+bright2=40a02b    # green
+bright3=df8e1d    # yellow
+bright4=1e66f5    # blue
+bright5=ea76cb    # pink
+bright6=179299    # teal
+bright7=bcc0cc    # Surface 1
 
-regular0=4e4e4e
-regular1=af5f5f
-regular2=5f885f
-regular3=af8760
-regular4=5f87ae
-regular5=875f87
-regular6=5f8787
-regular7=e4e4e4
-
-# Bright colors (color palette 8-15)
-bright0=3a3a3a #bright black
-bright1=870100 #bright red
-bright2=005f00 #bright green
-bright3=d8865f #bright yellow
-bright4=0087af #bright blue
-bright5=87025f #bright magenta
-bright6=008787 #bright cyan
-bright7=eeeeee #bright white
+[key-bindings]
+font-increase=Control+y
+font-decrease=Control+o
+font-reset=Control+r
