--- a/foot/dark.ini
+++ b/foot/dark.ini
@@ -1,28 +1,42 @@
-font=SauceCodePro Nerd Font:style=Regular:size=11.5
-font-bold=SauceCodePro Nerd Font:style=SemiBold:size=11.5                                               
+font=CaskaydiaCoveNerdFont:style=Regular:size=15.5
+font-bold=CaskaydiaCoveNerdFont:style=Bold:size=15.5
+font-italic=CaskaydiaCoveNerdFont:style=Italic:size=15.5
 
-pad=10x10
+
+pad=7x5
+
+[key-bindings]
+font-increase=Control+o
+font-decrease=Control+y
+font-reset=Control+r
+spawn-terminal=Mod1+i
+scrollback-up-half-page=Control+m
+scrollback-down-half-page=Control+f
+scrollback-up-page=Mod4+m
+
 
 
 [colors]
-background=4b4b4b
-foreground=d9d9d9
+foreground=c6d0f5 # Text
+background=303446 # Base
+regular0=51576d   # Surface 1
+regular1=e78284   # red
+regular2=a6d189   # green
+regular3=e5c890   # yellow
+regular4=8caaee   # blue
+regular5=f4b8e4   # pink
+regular6=81c8be   # teal
+regular7=b5bfe2   # Subtext 1
+bright0=626880    # Surface 2
+bright1=e78284    # red
+bright2=a6d189    # green
+bright3=e5c890    # yellow
+bright4=8caaee    # blue
+bright5=f4b8e4    # pink
+bright6=81c8be    # teal
+bright7=a5adce    # Subtext 0
 
-regular0=4e4e4e
-regular1=d68787
-regular2=5f865f
-regular3=d8af5f
-regular4=85add4
-regular5=d7afaf
-regular6=87afaf
-regular7=d0d0d0
-
-# Bright colors (color palette 8-15)
-bright0=626262 # bright black
-bright1=d75f87 # bright red
-bright2=87af87 # bright green
-bright3=ffd787 # bright yellow
-bright4=add4fb # bright blue
-bright5=ffafaf # bright magenta
-bright6=87d7d7 # bright cyan
-bright7=e4e4e4 # bright white
+[key-bindings]
+font-increase=Control+y
+font-decrease=Control+o
+font-reset=Control+r
