--- a/starship.toml
+++ b/starship.toml
@@ -2,25 +2,23 @@ add_newline = false
 
 format = """
 [░▒▓](#a3aed2)\
-[ 󰣇 ](bg:#a3aed2 fg:#090c0c)\
+[ 󰣇 ](bg:#a3aed2 fg:#303446)\
 [](bg:#7aa2f7 fg:#a3aed2)\
 $directory\
-[](fg:#7aa2f7 bg:#34548a)\
+[](fg:#7aa2f7 bg:#73799e)\
 $git_branch\
 $git_status\
-[](fg:#34548a bg:#394260 )\
+[](bg:#565a6e fg:#73799e)\
 $nodejs\
 $rust\
 $golang\
 $python\
 $php\
-[](fg:#394260 bg:#565a6e)\
-$time\
 [ ](fg:#565a6e)\
 \n$character"""
 
 [directory]
-style = "fg:#24283b bg:#7aa2f7"
+style = "fg:#303446  bg:#7aa2f7"
 format = "[ $path ]($style)"
 truncation_length = 4
 truncation_symbol = "…/"
@@ -34,31 +32,24 @@ truncate_to_repo = false
 
 [git_branch]
 symbol = ""
-style = "bg:#34548a"
-format = '[[ $symbol $branch ](fg:#e9e9ed bg:#34548a)]($style)'
+style = "bg:#00C1FF"
+format = '[[ $symbol $branch ](fg:#e9e9ed bg:#73799e)]($style)'
 
 [git_status]
 style = "bg:#34548a"
-format = '[[($all_status$ahead_behind )](fg:#e9e9ed  bg:#34548a)]($style)'
+format = '[[$all_status$ahead_behind](fg:#e9e9ed bg:#73799e)]($style)'
 
 [rust]
 symbol = ""
 style = "bg:#394260"
-format = '[[ $symbol ($version) ](fg:#e9e9ed bg:#394260)]($style)'
-
-[time]
-disabled = false
-time_format = "%R" # Hour:Minute Format
-style = "bg:#565a6e"
-format = '[[  $time ](fg:#e9e9ed bg:#565a6e)]($style)'
+format = '[[ $symbol ($version) ](fg:#e9e9ed bg:#565a6e)]($style)'
 
 [python]
 symbol = ""
 style = "bg:#394260"
-format = '[[ $symbol ($version \($virtualenv\)) ](fg:#e9e9ed bg:#394260)]($style)'
-
+format = '[[ $symbol ($version \($virtualenv\)) ](fg:#e9e9ed bg:#73799e)]($style)'
 
 [nodejs]
 symbol = ""
 style = "bg:#394260"
-format = '[[ $symbol ($version) ](fg:#e9e9ed bg:#394260)]($style)'
+format = '[[ $symbol ($version) ](fg:#e9e9ed bg:#73799e)]($style)'
