--- a/foot/light.ini
+++ b/foot/light.ini
@@ -1,9 +1,7 @@
-font=CaskaydiaCoveNerdFont:style=Regular:size=15.5
-font-bold=CaskaydiaCoveNerdFont:style=Bold:size=15.5
-font-italic=CaskaydiaCoveNerdFont:style=Italic:size=15.5
+font=GeistMonoNerdFont:style=Medium:size=16
+font-bold=GeistMonoNerdFont:style=Black:size=16
 
-
-pad=7x5
+pad=7x6
 
 [key-bindings]
 font-increase=Control+o
@@ -15,27 +13,39 @@ scrollback-down-half-page=Control+f
 scrollback-up-page=Mod4+m
 
 
-[colors]
-foreground=4c4f69 # Text
-background=eff1f5 # Base
-regular0=5c5f77   # Subtext 1
-regular1=d20f39   # red
-regular2=40a02b   # green
-regular3=df8e1d   # yellow
-regular4=1e66f5   # blue
-regular5=ea76cb   # pink
-regular6=179299   # teal
-regular7=acb0be   # Surface 2
-bright0=6c6f85    # Subtext 0
-bright1=d20f39    # red
-bright2=40a02b    # green
-bright3=df8e1d    # yellow
-bright4=1e66f5    # blue
-bright5=ea76cb    # pink
-bright6=179299    # teal
-bright7=bcc0cc    # Surface 1
 
 [key-bindings]
 font-increase=Control+y
 font-decrease=Control+o
 font-reset=Control+r
+
+[colors]
+foreground=4c4f69
+background=eff1f5
+
+regular0=5c5f77
+regular1=d20f39
+regular2=40a02b
+regular3=df8e1d
+regular4=1e66f5
+regular5=ea76cb
+regular6=179299
+regular7=acb0be
+
+bright0=6c6f85
+bright1=d20f39
+bright2=40a02b
+bright3=df8e1d
+bright4=1e66f5
+bright5=ea76cb
+bright6=179299
+bright7=bcc0cc
+
+selection-foreground=4c4f69
+selection-background=ccced7
+
+search-box-no-match=dce0e8 d20f39
+search-box-match=4c4f69 ccd0da
+
+jump-labels=dce0e8 fe640b
+urls=1e66f5
