--- a/sway/config
+++ b/sway/config
@@ -21,8 +21,8 @@ exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec ~/.config/sway/scripts/inactive-windows-transparency.py
 
 set $term foot
-exec chromium
-for_window [app_id="chromium"] move container to workspace 1
+exec firefox
+for_window [app_id="firefox"] move container to workspace 1
 workspace number 2
 exec $term
 
@@ -199,7 +199,7 @@ mode "resize" {
 input * {
 	xkb_layout "custom, us"
 	xkb_variant "dvp, intl"
-		repeat_rate 100
+	repeat_rate 100
 	repeat_delay 200
 	tap enable
     #next keyboard layout with caps lock
