--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -12,40 +12,71 @@ scrollback-up-half-page=Control+m
 scrollback-down-half-page=Control+f
 scrollback-up-page=Mod4+m
 
-
-
 [key-bindings]
 font-increase=Control+y
 font-decrease=Control+o
 font-reset=Control+r
 
+########################## catppuccin frappe #######################
+#[colors]
+#foreground=c6d0f5
+#background=303446
+#
+#regular0=b5bfe2
+#regular1=e78284
+#regular2=a6d189
+#regular3=e5c890
+#regular4=8caaee
+#regular5=f4b8e4
+#regular6=81c8be
+#regular7=626880
+#
+#bright0=a5adce
+#bright1=e78284
+#bright2=a6d189
+#bright3=e5c890
+#bright4=8caaee
+#bright5=f4b8e4
+#bright6=81c8be
+#bright7=51576d
+#
+#selection-foreground=c6d0f5
+#selection-background=4f5369
+#
+#search-box-no-match=232634 e78284
+#search-box-match=c6d0f5 414559
+#
+#jump-labels=232634 ef9f76
+#urls=8caaee
+
+############################## catppuccin mocha ###############################
 [colors]
-foreground=4c4f69
-background=eff1f5
+foreground=cdd6f4
+background=1e1e2e
 
-regular0=5c5f77
-regular1=d20f39
-regular2=40a02b
-regular3=df8e1d
-regular4=1e66f5
-regular5=ea76cb
-regular6=179299
-regular7=acb0be
+regular0=45475a
+regular1=f38ba8
+regular2=a6e3a1
+regular3=f9e2af
+regular4=89b4fa
+regular5=f5c2e7
+regular6=94e2d5
+regular7=bac2de
 
-bright0=6c6f85
-bright1=d20f39
-bright2=40a02b
-bright3=df8e1d
-bright4=1e66f5
-bright5=ea76cb
-bright6=179299
-bright7=bcc0cc
+bright0=585b70
+bright1=f38ba8
+bright2=a6e3a1
+bright3=f9e2af
+bright4=89b4fa
+bright5=f5c2e7
+bright6=94e2d5
+bright7=a6adc8
 
-selection-foreground=4c4f69
-selection-background=ccced7
+selection-foreground=cdd6f4
+selection-background=414356
 
-search-box-no-match=dce0e8 d20f39
-search-box-match=4c4f69 ccd0da
+search-box-no-match=11111b f38ba8
+search-box-match=cdd6f4 313244
 
-jump-labels=dce0e8 fe640b
-urls=1e66f5
+jump-labels=11111b fab387
+urls=89b4fa
